create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2548,43 +2548,43 @@ section.lazy-placeholder:after {
 .cid-rmArY1lgLQ .dropdown-item:hover {
   color: #3b1d47 !important;
 }
-.cid-s1qy9HbKIZ {
+.cid-sbZR3K7aBy {
   padding-top: 30px;
   padding-bottom: 15px;
   background-image: url("../../../assets/images/am-damask-art-duotone-with-logo-bg75-damask50-2000x2499.png");
 }
 @media (max-width: 767px) {
-  .cid-s1qy9HbKIZ .content {
+  .cid-sbZR3K7aBy .content {
     text-align: center;
   }
-  .cid-s1qy9HbKIZ .content > div:not(:last-child) {
+  .cid-sbZR3K7aBy .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 7670px) {
-  .cid-s1qy9HbKIZ .media-wrap {
+  .cid-sbZR3K7aBy .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s1qy9HbKIZ .media-wrap .mbr-iconfont-logo {
+.cid-sbZR3K7aBy .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s1qy9HbKIZ .media-wrap img {
+.cid-sbZR3K7aBy .media-wrap img {
   height: 8rem;
 }
 @media (max-width: 767px) {
-  .cid-s1qy9HbKIZ .footer-lower .copyright {
+  .cid-sbZR3K7aBy .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s1qy9HbKIZ .footer-lower hr {
+.cid-sbZR3K7aBy .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s1qy9HbKIZ .footer-lower .social-list {
+.cid-sbZR3K7aBy .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2594,44 +2594,44 @@ section.lazy-placeholder:after {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-s1qy9HbKIZ .footer-lower .social-list .mbr-iconfont-social {
+.cid-sbZR3K7aBy .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s1qy9HbKIZ .footer-lower .social-list .soc-item {
+.cid-sbZR3K7aBy .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s1qy9HbKIZ .footer-lower .social-list a {
+.cid-sbZR3K7aBy .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s1qy9HbKIZ .footer-lower .social-list a:hover {
+.cid-sbZR3K7aBy .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s1qy9HbKIZ .footer-lower .social-list {
+  .cid-sbZR3K7aBy .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-s1qy9HbKIZ B {
+.cid-sbZR3K7aBy B {
   color: #ffffff;
 }
-.cid-s1qy9HbKIZ .copyright > p {
+.cid-sbZR3K7aBy .copyright > p {
   color: #8d629e;
   text-align: left;
 }
-.cid-s1qy9HbKIZ H5 {
+.cid-sbZR3K7aBy H5 {
   color: #8d629e;
   text-align: left;
 }
-.cid-s1qy9HbKIZ P {
+.cid-sbZR3K7aBy P {
   color: #8d629e;
   text-align: left;
 }
-.cid-s1qy9HbKIZ A {
+.cid-sbZR3K7aBy A {
   color: #ffffff;
 }
 .cid-s1l1sqiv3v {
@@ -3367,43 +3367,43 @@ section.lazy-placeholder:after {
 .cid-rmAs11HoqR .dropdown-item:hover {
   color: #3b1d47 !important;
 }
-.cid-s1qydVc4YL {
+.cid-sbZQZMyFXe {
   padding-top: 30px;
   padding-bottom: 15px;
   background-image: url("../../../assets/images/am-damask-art-duotone-with-logo-bg75-damask50-2000x2499.png");
 }
 @media (max-width: 767px) {
-  .cid-s1qydVc4YL .content {
+  .cid-sbZQZMyFXe .content {
     text-align: center;
   }
-  .cid-s1qydVc4YL .content > div:not(:last-child) {
+  .cid-sbZQZMyFXe .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 7670px) {
-  .cid-s1qydVc4YL .media-wrap {
+  .cid-sbZQZMyFXe .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s1qydVc4YL .media-wrap .mbr-iconfont-logo {
+.cid-sbZQZMyFXe .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s1qydVc4YL .media-wrap img {
+.cid-sbZQZMyFXe .media-wrap img {
   height: 8rem;
 }
 @media (max-width: 767px) {
-  .cid-s1qydVc4YL .footer-lower .copyright {
+  .cid-sbZQZMyFXe .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s1qydVc4YL .footer-lower hr {
+.cid-sbZQZMyFXe .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s1qydVc4YL .footer-lower .social-list {
+.cid-sbZQZMyFXe .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -3413,44 +3413,44 @@ section.lazy-placeholder:after {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-s1qydVc4YL .footer-lower .social-list .mbr-iconfont-social {
+.cid-sbZQZMyFXe .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s1qydVc4YL .footer-lower .social-list .soc-item {
+.cid-sbZQZMyFXe .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s1qydVc4YL .footer-lower .social-list a {
+.cid-sbZQZMyFXe .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s1qydVc4YL .footer-lower .social-list a:hover {
+.cid-sbZQZMyFXe .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s1qydVc4YL .footer-lower .social-list {
+  .cid-sbZQZMyFXe .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-s1qydVc4YL B {
+.cid-sbZQZMyFXe B {
   color: #ffffff;
 }
-.cid-s1qydVc4YL .copyright > p {
+.cid-sbZQZMyFXe .copyright > p {
   color: #8d629e;
   text-align: left;
 }
-.cid-s1qydVc4YL H5 {
+.cid-sbZQZMyFXe H5 {
   color: #8d629e;
   text-align: left;
 }
-.cid-s1qydVc4YL P {
+.cid-sbZQZMyFXe P {
   color: #8d629e;
   text-align: left;
 }
-.cid-s1qydVc4YL A {
+.cid-sbZQZMyFXe A {
   color: #ffffff;
 }
 .cid-rQXYJzlztJ {
@@ -3468,7 +3468,7 @@ section.lazy-placeholder:after {
 .cid-s1kXVEz00Y {
   padding-top: 120px;
   padding-bottom: 120px;
-  background-image: url("../../../assets/images/doors-1767563-1920-modified-1-1920x1024.png");
+  background-image: url("../../../assets/images/doors-1767563-1920-modified-purple-door-1-1920x1024.png");
 }
 .cid-s1kXVEz00Y H1 {
   color: #ffffff;
@@ -4025,43 +4025,43 @@ section.lazy-placeholder:after {
 .cid-rmArUsp6CV .dropdown-item:hover {
   color: #3b1d47 !important;
 }
-.cid-s1qxX73pHd {
+.cid-sbZR80BGdG {
   padding-top: 30px;
   padding-bottom: 15px;
   background-image: url("../../../assets/images/am-damask-art-duotone-with-logo-bg75-damask50-2000x2499.png");
 }
 @media (max-width: 767px) {
-  .cid-s1qxX73pHd .content {
+  .cid-sbZR80BGdG .content {
     text-align: center;
   }
-  .cid-s1qxX73pHd .content > div:not(:last-child) {
+  .cid-sbZR80BGdG .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 7670px) {
-  .cid-s1qxX73pHd .media-wrap {
+  .cid-sbZR80BGdG .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-s1qxX73pHd .media-wrap .mbr-iconfont-logo {
+.cid-sbZR80BGdG .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-s1qxX73pHd .media-wrap img {
+.cid-sbZR80BGdG .media-wrap img {
   height: 8rem;
 }
 @media (max-width: 767px) {
-  .cid-s1qxX73pHd .footer-lower .copyright {
+  .cid-sbZR80BGdG .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s1qxX73pHd .footer-lower hr {
+.cid-sbZR80BGdG .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s1qxX73pHd .footer-lower .social-list {
+.cid-sbZR80BGdG .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -4071,44 +4071,44 @@ section.lazy-placeholder:after {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-s1qxX73pHd .footer-lower .social-list .mbr-iconfont-social {
+.cid-sbZR80BGdG .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s1qxX73pHd .footer-lower .social-list .soc-item {
+.cid-sbZR80BGdG .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s1qxX73pHd .footer-lower .social-list a {
+.cid-sbZR80BGdG .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s1qxX73pHd .footer-lower .social-list a:hover {
+.cid-sbZR80BGdG .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s1qxX73pHd .footer-lower .social-list {
+  .cid-sbZR80BGdG .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-s1qxX73pHd B {
+.cid-sbZR80BGdG B {
   color: #ffffff;
 }
-.cid-s1qxX73pHd .copyright > p {
+.cid-sbZR80BGdG .copyright > p {
   color: #8d629e;
   text-align: left;
 }
-.cid-s1qxX73pHd H5 {
+.cid-sbZR80BGdG H5 {
   color: #8d629e;
   text-align: left;
 }
-.cid-s1qxX73pHd P {
+.cid-sbZR80BGdG P {
   color: #8d629e;
   text-align: left;
 }
-.cid-s1qxX73pHd A {
+.cid-sbZR80BGdG A {
   color: #ffffff;
 }
 .cid-s1l2Oyy2wm {
@@ -4242,6 +4242,92 @@ section.lazy-placeholder:after {
 }
 .cid-s1m6q9WezA H1 {
   color: #c3b8c7;
+}
+.cid-sbZQVX7Fgw {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-image: url("../../../assets/images/am-damask-art-duotone-with-logo-bg75-damask50-2000x2499.png");
+}
+@media (max-width: 767px) {
+  .cid-sbZQVX7Fgw .content {
+    text-align: center;
+  }
+  .cid-sbZQVX7Fgw .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 7670px) {
+  .cid-sbZQVX7Fgw .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sbZQVX7Fgw .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-sbZQVX7Fgw .media-wrap img {
+  height: 8rem;
+}
+@media (max-width: 767px) {
+  .cid-sbZQVX7Fgw .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-sbZQVX7Fgw .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-sbZQVX7Fgw .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-sbZQVX7Fgw .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-sbZQVX7Fgw .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sbZQVX7Fgw .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-sbZQVX7Fgw .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sbZQVX7Fgw .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-sbZQVX7Fgw B {
+  color: #ffffff;
+}
+.cid-sbZQVX7Fgw .copyright > p {
+  color: #8d629e;
+  text-align: left;
+}
+.cid-sbZQVX7Fgw H5 {
+  color: #8d629e;
+  text-align: left;
+}
+.cid-sbZQVX7Fgw P {
+  color: #8d629e;
+  text-align: left;
+}
+.cid-sbZQVX7Fgw A {
+  color: #ffffff;
 }
 .cid-rmAs60qIXA .navbar {
   background: #ffffff;
@@ -4634,92 +4720,6 @@ section.lazy-placeholder:after {
 .cid-rmAs60qIXA .nav-link:hover,
 .cid-rmAs60qIXA .dropdown-item:hover {
   color: #3b1d47 !important;
-}
-.cid-s1qylKhTZV {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-image: url("../../../assets/images/am-damask-art-duotone-with-logo-bg75-damask50-2000x2499.png");
-}
-@media (max-width: 767px) {
-  .cid-s1qylKhTZV .content {
-    text-align: center;
-  }
-  .cid-s1qylKhTZV .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 7670px) {
-  .cid-s1qylKhTZV .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-s1qylKhTZV .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-s1qylKhTZV .media-wrap img {
-  height: 8rem;
-}
-@media (max-width: 767px) {
-  .cid-s1qylKhTZV .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-s1qylKhTZV .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-s1qylKhTZV .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: flex-end;
-  justify-content: flex-end;
-}
-.cid-s1qylKhTZV .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-s1qylKhTZV .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-s1qylKhTZV .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-s1qylKhTZV .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-s1qylKhTZV .footer-lower .social-list {
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-}
-.cid-s1qylKhTZV B {
-  color: #ffffff;
-}
-.cid-s1qylKhTZV .copyright > p {
-  color: #8d629e;
-  text-align: left;
-}
-.cid-s1qylKhTZV H5 {
-  color: #8d629e;
-  text-align: left;
-}
-.cid-s1qylKhTZV P {
-  color: #8d629e;
-  text-align: left;
-}
-.cid-s1qylKhTZV A {
-  color: #ffffff;
 }
 .cid-saASsZnmxv {
   background-image: url("../../../assets/images/damask-10300-2000x2838.png");
@@ -5320,43 +5320,43 @@ section.lazy-placeholder:after {
 .cid-rmArQqIDfd .dropdown-item:hover {
   color: #3b1d47 !important;
 }
-.cid-rJ2mIAGLMB {
+.cid-sbZRcFQ6PO {
   padding-top: 30px;
   padding-bottom: 15px;
   background-image: url("../../../assets/images/am-damask-art-duotone-with-logo-bg75-damask50-2000x2499.png");
 }
 @media (max-width: 767px) {
-  .cid-rJ2mIAGLMB .content {
+  .cid-sbZRcFQ6PO .content {
     text-align: center;
   }
-  .cid-rJ2mIAGLMB .content > div:not(:last-child) {
+  .cid-sbZRcFQ6PO .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 7670px) {
-  .cid-rJ2mIAGLMB .media-wrap {
+  .cid-sbZRcFQ6PO .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rJ2mIAGLMB .media-wrap .mbr-iconfont-logo {
+.cid-sbZRcFQ6PO .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rJ2mIAGLMB .media-wrap img {
+.cid-sbZRcFQ6PO .media-wrap img {
   height: 8rem;
 }
 @media (max-width: 767px) {
-  .cid-rJ2mIAGLMB .footer-lower .copyright {
+  .cid-sbZRcFQ6PO .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rJ2mIAGLMB .footer-lower hr {
+.cid-sbZRcFQ6PO .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rJ2mIAGLMB .footer-lower .social-list {
+.cid-sbZRcFQ6PO .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -5366,43 +5366,43 @@ section.lazy-placeholder:after {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rJ2mIAGLMB .footer-lower .social-list .mbr-iconfont-social {
+.cid-sbZRcFQ6PO .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rJ2mIAGLMB .footer-lower .social-list .soc-item {
+.cid-sbZRcFQ6PO .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rJ2mIAGLMB .footer-lower .social-list a {
+.cid-sbZRcFQ6PO .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rJ2mIAGLMB .footer-lower .social-list a:hover {
+.cid-sbZRcFQ6PO .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rJ2mIAGLMB .footer-lower .social-list {
+  .cid-sbZRcFQ6PO .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rJ2mIAGLMB B {
+.cid-sbZRcFQ6PO B {
   color: #ffffff;
 }
-.cid-rJ2mIAGLMB .copyright > p {
+.cid-sbZRcFQ6PO .copyright > p {
   color: #8d629e;
   text-align: left;
 }
-.cid-rJ2mIAGLMB H5 {
+.cid-sbZRcFQ6PO H5 {
   color: #8d629e;
   text-align: left;
 }
-.cid-rJ2mIAGLMB P {
+.cid-sbZRcFQ6PO P {
   color: #8d629e;
   text-align: left;
 }
-.cid-rJ2mIAGLMB A {
+.cid-sbZRcFQ6PO A {
   color: #ffffff;
 }
